# weeknum

./: .gitignore  CHANGELOG.md  LICENCE  PRIVACY_POLICY.md  README.md  pyproject.toml
src/: main.py  utils.py
