[project]
name = "Weeknum"
version = "1.2.0"
description = "Instant information of current week number and easy change of dates"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Twilight0", email = "twilight0@vivaldi.net" }
]
dependencies = [
    "flet==0.81.0",
    "requests>=2.32.5"

]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "org"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Weeknum"

# company name to display in about app dialogs
company = "Home"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2026 by Twilight0"

[tool.flet.app]
path = "src"

[tool.flet.android]
min_sdk_version = 25
target_sdk_version = 35
